--- a/src/data/grammar/mtg/story/mtg-characters.yaml
+++ b/src/data/grammar/mtg/story/mtg-characters.yaml
@@ -44,6 +44,7 @@
       "Freyalise, Llanowar's Fury#femalePronouns#",
       "Garruk Wildspeaker#malePronouns#",
       "Gideon Jura#malePronouns#",
+      "Gix#malePronouns#",
       "Huatli, Warrior Poet#femalePronouns#",
       "Jace Beleren#malePronouns#",
       "Jaya Ballard#femalePronouns#",
@@ -191,6 +192,7 @@
     "Anep",
     "Anitan",
     "Anje",
+    "Arel",
     "Arna",
     "Axsh",
     "Baris",
@@ -257,6 +259,7 @@
     "Rimheit",
   	"Ruba",
   	"Runo",
+    "Saidah",
     "Sarlena",
     "Sirislav",
   	"Strava",
