more names and places

--- a/src/data/grammar/mtg/story/mtg-locations.yaml
+++ b/src/data/grammar/mtg/story/mtg-locations.yaml
@@ -1,7 +1,8 @@
 {
   "plane": ["Rath", "Shandalar", "Mirrodin", "Kamigawa", "Alara", "Zendikar", "Innistrad", "Kaladesh", "Amonkhet", "Ixalan",
             "Muraganda", "Mercadia", "Mirrodin", "Ravnica", "Lorwyn", "Tarkir", "Vryn", "Theros", "Shadowmoor", "Phyrexia",
-            "Dominaria"],
+            "Dominaria", "#obscurePlane#"],
+  "obscurePlane": ["Arkhos", "Azgol", "Belenon", "Equilor", "Ergamon", "Fabacin", "Ir", "Kaldheim", "Karsus", "Kephalai", "Kinshala", "Kolbahan", "Kyneth", "Luvion", "Moag", "Mongseng", "Muruganda", "  Pyrulea", "Rabia", "Segovia", "Ulgrotha", "Valla" ,"Xerex"],
   "nonPlaneLocation": [
       "Adarkar",
       "An-Havva",
@@ -47,6 +48,7 @@
       "Suq'Ata",
       "Tel-Jilad",
       "the Tangle",
+      "Thune",
       "Tolaria",
       "Ulgrotha",
       "Uktabi",
@@ -67,10 +69,14 @@
   	"Amrou",
   	"An-Zerrin",
   	"Ashenmoor",
+    "Atzocan",
+    "Barrenton",
+    "Burrenton",
   	"Coldraith's Keep",
   	"Corondor",
   	"Erdwal",
   	"Gatsaf",
+    "Gramur Forest",
   	"the Helvault",
     "Joraga",
   	"Jukai",
@@ -148,6 +154,7 @@
       "Sylvok",
       "Sunhome",
       "Tel-Jilad",
+      "Thunian",
       "Tolarian",
       "Tresserhorn",
       "Uktabi",
