--- a/src/data/grammar/mtg/story/mtg-characters.yaml
+++ b/src/data/grammar/mtg/story/mtg-characters.yaml
@@ -78,7 +78,8 @@
       "Baron Sengir#malePronouns#",
       "Belbe#femalePronouns#",
       "Belzenlok#malePronouns#",
-      "Borborygmos#malePronouns#",
+      "Borborygmos#malePronouns#",,
+      "Chandler#malePronouns#",
       "Commander Eesha#femalePronouns#",
       "Crovax#malePronouns#",
       "Davvol#malePronouns#",
@@ -101,12 +102,14 @@
       "Hidetsugu#malePronouns#",
       "Ink-Eyes#femalePronouns#",
       "Isamaru#malePronouns#",
+      "Joven#malePronouns#",
       "Jhoira#femalePronouns#",
       "Kiki-Jiki#malePronouns#",
       "Molimo#malePronouns#",
       "Momir Vig#malePronouns#",
       "Norin#malePronouns#",
       "Purphoros#malePronouns#",
+      "Purraj of Urborg#femalePronouns#",
       "Saffi Eriksdotter#femalePronouns#",
       "Sisay#femalePronouns#",
       "Slimefoot#malePronouns#",
@@ -185,130 +188,6 @@
     "#characterDisyllabic#"
   ],
 
-  "commonCharacterFirstName": [
-    "Afari",
-  	"Agathe",
-    "Alcarus",
-    "Anep",
-    "Anitan",
-    "Anje",
-    "Arel",
-    "Arna",
-    "Axsh",
-    "Baris",
-  	"Borzard",
-  	"Brigone",
-    "Brint",
-    "Bruenna",
-    "Chaeska",
-  	"Chadir",
-    "Daria",
-  	"Devin",
-    "Disa",
-    "Drarg",
-    "Fodrus",
-  	"Galanda",
-    "Garner",
-    "Gorghul",
-    "Goton",
-    "Grete",
-  	"Grezkrick",
-    "Gulsen",
-    "Gulistan",
-    "Halina",
-  	"Halvor",
-  	"Higa",
-  	"Ikarov",
-    "Illulia",
-  	"Ivra",
-    "Jaji",
-    "Javad",
-    "Jazal",
-  	"Jefan",
-    "Jestus",
-  	"Joskun",
-  	"Juri",
-    "Kadhu",
-    "Kellyg",
-    "Kensuke",
-    "Kirce",
-    "Ku-Ku",
-    "Libuse",
-    "Lothar",
-  	"Maikal",
-    "Maeveen",
-    "Maimun",
-  	"Matoc",
-    "Maury",
-    "Meekus",
-    "Minaldra",
-    "Mogai",
-    "Murat",
-  	"Myznar",
-  	"Naxtil",
-  	"Nefara",
-    "Noboru",
-    "Numa",
-  	"Ola",
-    "Olgard",
-    "Onatah",
-  	"Otak",
-    "Predak",
-    "Radulf",
-    "Resimir",
-    "Rimheit",
-  	"Ruba",
-  	"Runo",
-    "Saidah",
-    "Sarlena",
-    "Sirislav",
-  	"Strava",
-  	"Svar",
-    "Syeena",
-    "Taaveti",
-    "Tahli",
-  	"Takada",
-    "Tarran",
-    "Tojira",
-    "Tullus",
-  	"Turni",
-  	"Ushanti",
-  	"Uta",
-  	"Uzric",
-  	"Varrik",
-    "Venkat",
-  	"Vervamon",
-    "Vickon",
-    "Voka",
-    "Vulok",
-    "Wyhorn",
-    "Xantcha",
-  	"Yurin",
-    "Zaliki",
-    "Zemoo",
-    "Zilan",
-    "Zul"
-  ],
-
-  "commonCharacterLastName": [
-    "al-Wyluli",
-  	"Arenson",
-    "Chubbins",
-  	"Dagsson",
-    "Dasai",
-    "Dreya",
-  	"Falkenrath",
-  	"Feudkiller",
-    "Kennerüd",
-    "Kroft",
-  	"Muldrak",
-  	"Nasrin",
-  	"Rutstein",
-    "Schlak",
-  	"Stromkirk",
-  	"Wauki",
-    "#itemNounOrMassNoun.noSpaces.capitalize#[_suffix:bane,sbane]#_suffix#"
-  ],
   "npcCharacter": [
   	"#commonCharacterFirstName# the #adj.capitalize#",
   	"#commonCharacterFirstName#[_lastName:, #commonCharacterLastName#]#_lastName#, [_home:#minorStoryLocation#,#demonym#,#characterFactionOrRace#]#_home.capitalize# #characterClass.capitalize#",
@@ -343,6 +222,9 @@
     "#creatureTypes# hunter",
     "#nonPlaneLocation# emissary",
     "#massNoun#mancer",
+    "#characterProfession#",
+    "#wizardSubclass#",
+    "#minorCharacterClass#",
     "[_suffix:dancer,singer,caller,speaker,eater,drinker,fighter,maker,mother,father,brother,sister]#nounCompoundWorthy.capitalize.noSpaces##_suffix#"
   ],
   "characterTitleObjectNoun": [
@@ -368,7 +250,7 @@
     "stalker",
     "warden",
     "walker",
-    "#emotion##verbTransitive.noSpaces.lowercase#er"
+    "#emotion.noSpaces##verbTransitive.noSpaces.lowercase#er"
   ],
   "characterProfession": [
     "architect",
@@ -380,17 +262,37 @@
     "blacksmith",
     "candlemaker",
     "cartwright",
+    "carver",
     "cobbler",
+    "engineer",
     "falconer",
     "inventor",
     "jester",
     "jewler",
     "headsman",
     "magistrate",
+    "metalworker",
     "scrivener",
     "tailor",
     "tax collector",
-    "undertaker"
+    "undertaker",
+    "woodworker",
+    "#nounCompoundWorthy#wright"
+  ],
+  "wizardSubclass": [
+    "mutationist",
+    "#nounCompoundWorthy#weaver",
+    "#massNoun#mancer",
+    "#placeNoun# witch",
+    "#abstractNounMassNounOrEmotion# priest[_of:, of #godCharacter#]#_of#"
+  ],
+  "minorCharacterClass": [
+    "guardcaptain",
+    "hermit",
+    "ordinar",
+    "sective",
+    "tactician",
+    "veteran"
   ],
   "characterRace": [
   	"akki",
@@ -476,7 +378,8 @@
     "Vulshok",
   	"Wojek",
     "#xth.capitalize# Company",
-    "#nounCompoundWorthy#-Tribe"
+    "#nounCompoundWorthy#-Tribe",
+    "#adjStorybook.capitalize# Council"
   ],
 
   "amonkhetCrop": [
