--- a/src/data/grammar/mtg/story/mtg-locations.yaml
+++ b/src/data/grammar/mtg/story/mtg-locations.yaml
@@ -86,14 +86,18 @@
   	"Makindi",
     "Mauzam Asylum",
   	"Meletis",
+    "Naktamun",
   	"Numai",
+    "Oran-Rief",
   	"Palandius",
   	"Knollridge",
   	"Kroog",
     "Lumengrid",
+    "Oneah",
     "Qal Sisma",
   	"Rootwater",
   	"Talas",
+    "Thraben",
   	"Tidehollow",
   	"Unx",
   	"Vectis City",
@@ -117,6 +121,7 @@
       "Duskmantle",
       "Ekundu",
       "Esper",
+      "Evos Isle",
       "Femeref",
       "Ghirapur",
       "Glen Elendra",
@@ -135,6 +140,7 @@
       "Kuldotha",
       "Llanowar",
       "Malakir",
+      "Martyne",
       "Mercadian",
       "Mephidross",
       "Mwonvuli",
@@ -142,7 +148,9 @@
       "Naya",
       "Nephalia",
       "Oboro",
+      "Onean",
       "Ondu",
+      "Oran-Rief",
       "Orzhova",
       "Oxidda",
       "Rishadan",
@@ -154,6 +162,7 @@
       "Sylvok",
       "Sunhome",
       "Tel-Jilad",
+      "Thraben",
       "Thunian",
       "Tolarian",
       "Tresserhorn",
