--- a/src/data/grammar/vocab/verbs/verb-reflexive.yaml
+++ b/src/data/grammar/vocab/verbs/verb-reflexive.yaml
@@ -27,6 +27,7 @@ verbReflexive:
 - stick up for
 - control
 - injure
+- shave
 - second-guess
 - make a fool of
 - make an ass of
@@ -61,6 +62,7 @@ verbReflexiveGerund:
 - sticking up for
 - controlling
 - injuring
+- shaving
 - second-guessing
 - making a fool of
 - making an ass of
